new component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,4 +30,13 @@
       <p>{{ errorMessage }}</p>
     </div>
   </div>
+
+  <div *ngIf="teams.length" class="teams-container">
+    <app-team
+      *ngFor="let team of teams; let i = index"
+      [team]="team"
+      [index]="i"
+    >
+    </app-team>
+  </div>
 </div>
